# Web-Alquiler-de-Maquinaria

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml  createdb.sql  populate_rows.sql
backend/media/: nginx.conf
backend/src/: constants.rs  main.rs
backend/src/custom_types/: enums.rs  structs.rs
backend/src/handlers/: auth.rs  machinery_mgmt.rs  maintenance_mgmt.rs  mod.rs  questions.rs  reviews.rs  stats.rs
backend/src/helpers/: auth.rs  machinery_mgmt.rs  mod.rs
backend/src/tests/: auth.rs  auth_tests.rs  helpers.rs  machinery_mgmt.rs  machinery_mgmt_tests.rs  maintenance_mgmt.rs  mod.rs  questions.rs  reviews.rs  stats.rs
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/context/: UserContext.jsx
frontend/src/features/: NotFoundPage.jsx
frontend/src/features/AddEmployee/: AddEmployee.jsx
frontend/src/features/ChangePassword/: ChangePassword.jsx
frontend/src/features/Dashboard/: AddEmployee.jsx  BarChart.jsx  DashboardPage.jsx  Employees.jsx  EmployeesList.jsx  HorizontalBarChart.jsx  LineChart.jsx  MachineCopies.jsx  Machines.jsx  MachinesList.jsx  QAPanel.jsx  RegisterMachineForm.jsx  RentalCard.jsx  Rentals.jsx  ServiceReviews.jsx  Statistics.jsx  UnansweredQuestion.jsx
frontend/src/features/Explore/: ExplorePage.jsx  Filters.jsx  Rating.jsx  (+5 more)
frontend/src/layout/: Footer.jsx  MainLayout.jsx  Nav.jsx  Navbar.jsx
frontend/src/routes/: AppRoutes.jsx  ProtectedRoutes.jsx
serverMp/: .env.example  index.js  package-lock.json  package.json
(+32 files in other folders)
