[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.15", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.45.0", features = ["full"] }
tracing-subscriber = "0.3.19"
argon2 = "0.5.3"
chrono = "0.4.41"
jsonwebtoken = "9.3.1"