[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
reqwest = { version = "0.12.15", features = ["json"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.45.0", features = ["full"] }
tracing-subscriber = "0.3.19"
chrono = {version = "0.4.41", features = ["serde"]}
jsonwebtoken = "9.3.1"
tokio-postgres = {version = "0.7.13", features = ["with-chrono-0_4"]}
lettre = "0.11.16"
dotenvy = "0.15.7"
rand = "0.9.1"
hex = "0.4.3"
sha2 = "0.10.9"
validator = { version = "0.20.0", features = ["derive"] }
tower-http = { version = "0.6.4", features = ["cors"] }